finish 1_Download_Preprocess_ESA_WorldCover_Data.ipynb

--- a/ASF/0_Download_Preprocess_Planet_Data.ipynb
+++ b/ASF/0_Download_Preprocess_Planet_Data.ipynb
@@ -49,9 +49,7 @@
    "id": "1e173204-135f-461d-989e-01d0a8ae8553",
    "metadata": {},
    "source": [
-    "This notebook downloads a Planet Scene and prepares it for the DSWx workflow.\n",
-    "\n",
-    "Eventually, when HLS data becomes available, we should replace this notebook with one that downloads HLS data and prepares it in the same manner."
+    "This notebook downloads a Planet Scene and prepares it for the DSWx workflow."
    ]
   },
   {
