--- a/ASF/1_Download_Preprocess_ESA_WorldCover_Data.ipynb
+++ b/ASF/1_Download_Preprocess_ESA_WorldCover_Data.ipynb
@@ -10,11 +10,12 @@
     "import geopandas as gpd\n",
     "from ipyfilechooser import FileChooser\n",
     "from pathlib import Path\n",
-    "import rasterio\n",
-    "import re\n",
-    "import requests\n",
-    "from shapely.geometry import Polygon, box \n",
-    "from tqdm.auto import tqdm "
+    "import rioxarray as rxr\n",
+    "import rioxarray.merge\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "import s3fs\n",
+    "from shapely.geometry import mapping"
    ]
   },
   {
@@ -22,7 +23,7 @@
    "id": "9195b8c3-ac6f-4819-bc86-fc21b7049719",
    "metadata": {},
    "source": [
-    "### Select the HLS data output from Notebook 0, which has been pre-processed and cropped to a chip"
+    "### Select the chip shape file"
    ]
   },
   {
@@ -32,9 +33,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Select the output preprocessed chip from Notebook 0\")\n",
+    "print(\"Select the chip shape file generated in Notebook 0\")\n",
     "fc = FileChooser(Path.cwd())\n",
     "display(fc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63fe9e8b-ceaf-4164-8b0f-7dc76b041f3e",
+   "metadata": {},
+   "source": [
+    "### Load the chip geometry from the chip shapefile"
    ]
   },
   {
@@ -44,66 +53,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chip_path = Path(fc.selected)\n",
-    "chip_path"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "edeadd93-acb3-4a62-a019-ea31bdd12298",
-   "metadata": {},
-   "source": [
-    "### Grab the chip ID from the cropped image filename"
+    "shape_path = Path(fc.selected)\n",
+    "shape_path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f8644c8-1d24-4bbf-99db-0f8f37a332d4",
+   "id": "cf95e798-8698-4f1e-81d9-efbb93341654",
    "metadata": {},
    "outputs": [],
    "source": [
-    "regex = \"(?<=/cropped_to_chip_)\\d+\"\n",
-    "chip_id = int(re.search(regex, str(chip_path)).group(0))\n",
-    "chip_id"
+    "geometry_gdf = gpd.read_file(shape_path)\n",
+    "geometry = geometry_gdf['geometry'][0]\n",
+    "geometry"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "63fe9e8b-ceaf-4164-8b0f-7dc76b041f3e",
+   "id": "dbe22481-df42-43ea-adfc-8ea6b427fa0a",
    "metadata": {},
    "source": [
-    "### Create a Polygon from the bounds of the chip "
+    "### Collect the chip directory path and chip ID"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d4530db-4359-4b83-8d71-9685a57119a7",
+   "id": "5e2ec8e0-ab58-4ebf-b0ef-161c70fd3c94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "chips = gpd.read_file('ResampleblocksUpd.geojson')\n",
-    "geometry = chips.loc[chips['random_id'][chip_id], ['geometry']][0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a5ad6b5c-c952-4160-952a-70ab7ee78d58",
-   "metadata": {},
-   "source": [
-    "### Create an output directory for ESA WorldCover Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c7f3b39-16aa-429b-8c00-36cb40fe5886",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dir = Path.cwd()/\"ESA_WorldCover_10m_2020_v1_data\"\n",
-    "output_dir.mkdir(exist_ok=True)"
+    "chip_dir = shape_path.parent\n",
+    "chip_id = chip_dir.name.split('_')[-1]\n",
+    "chip_dir"
    ]
   },
   {
@@ -117,34 +100,87 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aa596f5-8d61-4145-bad0-53411b72d7c9",
+   "id": "57e573e2-bf6b-4c23-a768-e2639b15fc61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_url_prefix = \"https://esa-worldcover.s3.eu-central-1.amazonaws.com\"\n",
+    "bucket = \"s3://esa-worldcover/v100/2020\"\n",
+    "s3 = s3fs.S3FileSystem(anon=True)\n",
     "\n",
-    "# load worldcover grid\n",
-    "url = f'{s3_url_prefix}/v100/2020/esa_worldcover_2020_grid.geojson'\n",
-    "grid = gpd.read_file(url)\n",
-    "\n",
-    "# get grid tiles intersecting AOI\n",
+    "geojson = f'{bucket}/esa_worldcover_2020_grid.geojson'\n",
+    "grid = gpd.read_file(geojson)\n",
     "tiles = grid[grid.intersects(geometry)]\n",
     "\n",
-    "for tile in tqdm(tiles.ll_tile):\n",
-    "    url = f\"{s3_url_prefix}/v100/2020/map/ESA_WorldCover_10m_2020_v100_{tile}_Map.tif\\n\"\n",
-    "    r = requests.get(url, allow_redirects=True)\n",
-    "    out_fn = output_dir/f\"ESA_WorldCover_10m_2020_v100_{tile}_Map.tif\"\n",
-    "    with open(out_fn, 'wb') as f:\n",
-    "        f.write(r.content)"
+    "for tile in tiles.ll_tile:\n",
+    "    tile_path = f\"{bucket}/map/ESA_WorldCover_10m_2020_v100_{tile}_Map.tif\"\n",
+    "    output_path = f\"{chip_dir}/{tile_path.split('/')[-1]}\"\n",
+    "    s3.download(tile_path, output_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c991480e-d70a-4581-bb01-7a43bc15311a",
+   "metadata": {},
+   "source": [
+    "### Clip tiles to chip geometry and merge "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70089372-ef8e-4807-a75a-d774fce5c01c",
+   "id": "86170cf3-ab48-4fe7-8c3c-78d6576fed6a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tile_paths = list(chip_dir.rglob(\"ESA_WorldCover_10m_2020_v100*.tif\"))\n",
+    "\n",
+    "to_merge = list()\n",
+    "for tile_path in tqdm(tile_paths):\n",
+    "    tile = rxr.open_rasterio(tile_path, masked=True).squeeze()\n",
+    "    tile = tile.rio.clip(geometry_gdf.geometry.apply(mapping), 'EPSG:4326')\n",
+    "    to_merge.append(tile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee3a21d8-1d22-483f-be3e-f4362a33e7fa",
+   "metadata": {},
+   "source": [
+    "### Write clipped, merged data to GeoTiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c881aac3-7e82-475d-83c9-142965c6bdb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = rxr.merge.merge_arrays(to_merge)\n",
+    "merged.rio.to_raster(chip_dir/f\"ESA_WorldCover_10m_2020_v100_chip_{chip_id}.tif\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b450f48-f5fd-489e-b0e6-d0dc79ea94ea",
+   "metadata": {},
+   "source": [
+    "### Delete intermediary files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "affdabd8-12ae-4b9e-908a-58c9e8595587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in tile_paths:\n",
+    "    try:\n",
+    "        p.unlink()\n",
+    "    except FileNotFoundError:\n",
+    "        pass"
+   ]
   }
  ],
  "metadata": {
