add missing geometry to pekel notebook

--- a/ASF/2_Download_Preprocess_Pekel_Occurrence_Data.ipynb
+++ b/ASF/2_Download_Preprocess_Pekel_Occurrence_Data.ipynb
@@ -66,7 +66,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geometry_gdf = gpd.read_file(shape_path)"
+    "geometry_gdf = gpd.read_file(shape_path)\n",
+    "geometry = geometry_gdf['geometry'][0]\n",
+    "geometry"
    ]
   },
   {
