add notebook to order Sentinel-1 RTCs

--- a/ASF/4_Order_HyP3_S1_RTCs_for_CNN_water_mapping.ipynb
+++ b/ASF/4_Order_HyP3_S1_RTCs_for_CNN_water_mapping.ipynb
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Authenticate on HyP3 with EarthData credentials and order RTC for the scenes on the chosen acquisition date"
+    "### Authenticate on HyP3 with EarthData credentials and order RTCs for the scenes on the chosen acquisition date"
    ]
   },
   {
