resize_chips nb

--- a/ASF/0_Download_Preprocess_Planet_Data.ipynb
+++ b/ASF/0_Download_Preprocess_Planet_Data.ipynb
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chips = gpd.read_file('chips.geojson')\n",
+    "chips = gpd.read_file('6km_chips.geojson')\n",
     "chips_utm = chips.to_crs(planet_crs)\n",
     "chips_utm.head()"
    ]
@@ -327,7 +327,7 @@
    },
    "outputs": [],
    "source": [
-    "rgnir = coastal_blue_clip.sel(band=[7, 5, 3])\n",
+    "rgnir = coastal_blue_clip.sel(band=[8, 6, 4])\n",
     "rgnir.attrs['long_name'] = ('nir', 'red', 'green')\n",
     "rgnir"
    ]
@@ -372,42 +372,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tif_path = chip_dir/f'chip_{chip_id}.tif'\n",
+    "tif_path = chip_dir/f'Planet_nir_red_green_chip_{chip_id}.tif'\n",
     "\n",
     "rgnir_out.rio.to_raster(tif_path)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d7ebf40f-8238-4c8c-b84e-6f8417fe3b94",
-   "metadata": {},
-   "source": [
-    "### Plot GeoTiff"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f825cb5-bdad-41a2-bea0-9060f1ca2be5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geowombat as gw\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "fig, ax = plt.subplots(dpi=200)\n",
-    "\n",
-    "with gw.open(tif_path,\n",
-    "            band_names=['nir', 'red', 'green'],) as src:\n",
-    "    src.where(src != np.nan).sel(band=['nir', 'red', 'green']).plot.imshow(robust=True, ax=ax)\n",
-    "plt.tight_layout(pad=1)\n",
-    "# plt.savefig(\"rgb_plot.png\", dpi=150)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d52ff5a6-a787-466a-9765-3f8df128f0c4",
+   "id": "9c5aa9fd-f208-47a5-8307-7ffeb6c85abf",
    "metadata": {},
    "outputs": [],
    "source": []
