update workflow and add 6km_chips.geojson

--- a/ASF/0_Download_Preprocess_Planet_Data.ipynb
+++ b/ASF/0_Download_Preprocess_Planet_Data.ipynb
@@ -49,7 +49,7 @@
    "id": "1e173204-135f-461d-989e-01d0a8ae8553",
    "metadata": {},
    "source": [
-    "This notebook downloads a Planet Scene and prepares it for the DSWx workflow."
+    "**This notebook downloads a Planet 8-band and/or 4-band scene,  clips it to the geometry of the chip it contains, and prepares it for the DSWx validation data workflow.**"
    ]
   },
   {
@@ -79,16 +79,10 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "formal-metropolitan",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:09.550320Z",
-     "start_time": "2022-06-24T18:33:09.533068Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "planet_scene_id = '20211003_161639_91_241d'\n",
-    "# planet_scene_id = input(\"Enter a Planet Scene ID\")"
+    "planet_scene_id = input(\"Enter a Planet Scene ID\")"
    ]
   },
   {
@@ -98,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def planet_download(api_key: str, scene_id: str, output_dir: Union[str, Path] = Path.cwd(), asset_types: List = ['ortho_analytic_8b_sr']):\n",
+    "def planet_download(api_key: str, scene_id: str, output_dir: Union[str, Path] = Path.cwd(), asset_types: List = ['ortho_analytic_4b_sr', 'ortho_analytic_8b_sr']):\n",
     "    \"\"\"\n",
     "    Download Planet data by scene ID \n",
     "\n",
@@ -127,7 +121,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dd2d2776-637b-41ac-89b8-7b05c39009bf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "planet_dir = Path.cwd()/\"planet_data\"\n",
@@ -138,12 +134,36 @@
   {
    "cell_type": "markdown",
    "id": "2e778594-3ec8-4951-8d67-fc2cf784e893",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# 2. Identify Intersecting Chip\n",
     "\n",
     "**TODO: ACCOUNT FOR MULTIPLE CHIP INTERSECTIONS**\n",
     "\n",
+    "### Select downloaded Planet data with 8 bands if available, otherwise use the 4-band product "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e0a974e-cf1a-4b03-8345-0f97a7a49486",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planet_image_path = list(planet_dir.rglob(f'{planet_scene_id}*8b.tif'))\n",
+    "if len(planet_image_path) == 0:\n",
+    "    planet_image_path = list(planet_dir.rglob(f'{planet_scene_id}*.tif'))\n",
+    "planet_image_path = planet_image_path[0]\n",
+    "planet_image_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40aa8c7e-59c1-4e80-ba48-0241215da466",
+   "metadata": {},
+   "source": [
     "### Expose metadata"
    ]
   },
@@ -154,8 +174,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "planet_image_path = list(planet_dir.rglob(f'{planet_scene_id}*.tif'))[0]\n",
-    "\n",
     "with rasterio.open(planet_image_path) as ds:\n",
     "    planet_crs = ds.crs\n",
     "    planet_box = box(*ds.bounds)\n",
@@ -209,7 +227,10 @@
    "source": [
     "intersects = chips_utm.geometry.intersects(planet_box) # create intersection mask\n",
     "intersecting_chips = chips_utm[intersects].reset_index(drop=True) # create new Dataframe containing intersecting chips\n",
-    "chip_id = index = intersecting_chips.random_id[0]\n",
+    "\n",
+    "\n",
+    "# chip_id = index = intersecting_chips.random_id[0]\n",
+    "chip_id = index = intersecting_chips.SAMPLE_ID[0]\n",
     "intersecting_chips"
    ]
   },
@@ -236,7 +257,7 @@
     "\n",
     "shape_path = chip_dir/f'chip_{index}.shp'\n",
     "\n",
-    "geom = chips.loc[chips['random_id'] == chip_id, 'geometry'].values[0]\n",
+    "geom = chips.loc[chips['SAMPLE_ID'] == chip_id, 'geometry'].values[0]\n",
     "df = gpd.GeoDataFrame({\"id\":1,\"geometry\":[geom]})\n",
     "df.to_file(shape_path)"
    ]
@@ -256,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crop_extent = chips.loc[chips['random_id'] == chip_id, 'geometry'].values[0]\n",
+    "crop_extent = chips.loc[chips_utm['SAMPLE_ID'] == chip_id, 'geometry'].values[0]\n",
     "crop_extent"
    ]
   },
@@ -267,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crop_extent_gdf = gpd.GeoDataFrame(index=[0], crs='EPSG:4326', geometry=[crop_extent])\n",
+    "crop_extent_gdf = gpd.GeoDataFrame(index=[0], crs=planet_crs, geometry=[crop_extent])\n",
     "crop_extent_gdf"
    ]
   },
@@ -289,7 +310,19 @@
     "planet_image = rxr.open_rasterio(planet_image_path,\n",
     "                                 masked=True).squeeze()\n",
     "\n",
-    "planet_clipped = planet_image.rio.clip(crop_extent_gdf.geometry.apply(mapping), 'EPSG:4326')"
+    "planet_clipped = planet_image.rio.clip(crop_extent_gdf.geometry.apply(mapping), 'EPSG:4326')\n",
+    "planet_clipped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9f93ffd-f4a5-45d9-a81c-f797de616a2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "band_index = {v: i+1 for i, v in enumerate(planet_clipped.attrs['long_name'])}\n",
+    "band_index"
    ]
   },
   {
@@ -307,7 +340,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coastal_blue_clip = planet_clipped.where(planet_clipped[0] != planet_profile['nodata'])"
+    "if 'coastal_blue' in band_index:\n",
+    "    planet_clipped = planet_clipped.where(planet_clipped[band_index['coastal_blue']] != planet_profile['nodata'])"
    ]
   },
   {
@@ -327,7 +361,11 @@
    },
    "outputs": [],
    "source": [
-    "rgnir = coastal_blue_clip.sel(band=[8, 6, 4])\n",
+    "rgnir = planet_clipped.sel(band=[\n",
+    "    band_index['nir'],\n",
+    "    band_index['red'],\n",
+    "    band_index['green']\n",
+    "])\n",
     "rgnir.attrs['long_name'] = ('nir', 'red', 'green')\n",
     "rgnir"
    ]
@@ -372,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tif_path = chip_dir/f'Planet_nir_red_green_chip_{chip_id}.tif'\n",
+    "tif_path = chip_dir/f'{planet_image_path.stem}_chip_{chip_id}.tif'\n",
     "\n",
     "rgnir_out.rio.to_raster(tif_path)"
    ]
@@ -380,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c5aa9fd-f208-47a5-8307-7ffeb6c85abf",
+   "id": "a1b1ef04-e7fb-432d-81b8-dfbe16a87462",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -388,7 +426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dswx_calval [conda env:.local-dswx_calval]",
+   "display_name": "dswx_calval",
    "language": "python",
    "name": "conda-env-.local-dswx_calval-py"
   },
