--- a/ASF/2_Download_Preprocess_S1_LULC_Data.ipynb
+++ b/ASF/2_Download_Preprocess_S1_LULC_Data.ipynb
@@ -7,17 +7,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import datetime, timedelta\n",
     "import geopandas as gpd\n",
     "from ipyfilechooser import FileChooser\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
     "import rioxarray as rxr\n",
     "import rioxarray.merge\n",
-    "from tqdm.auto import tqdm\n",
-    "from typing import List\n",
-    "\n",
-    "import s3fs\n",
     "from shapely.geometry import mapping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90af90d6-46cc-4f1d-9a99-b3380e987ea3",
+   "metadata": {},
+   "source": [
+    "**This notebook downloads Sentinel-2 Land-Use Land-Cover (LULC) data intersecting the chip, clips each scene to the extents of the chip, and then merges them**"
    ]
   },
   {
@@ -25,19 +30,55 @@
    "id": "9195b8c3-ac6f-4819-bc86-fc21b7049719",
    "metadata": {},
    "source": [
-    "### Select the chip shape file"
+    "### Select the chip directory"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52a0ed18-106a-4d1e-8cc0-57bb9010adc3",
+   "id": "47cfc449-107e-4408-9b52-fca373b22750",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Select the chip shape file generated in Notebook 0\")\n",
+    "print(\"Select the chip directory containing the preprocessed Planet data, Chip shapefile, and clipped Pekel occurance data\")\n",
     "fc = FileChooser(Path.cwd())\n",
     "display(fc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bce569fb-0054-45da-a530-3787da7c13f3",
+   "metadata": {},
+   "source": [
+    "### Identify paths to Planet data and chip shapefile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9fe764f-0413-49b8-8268-fced56d9683f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chip_dir = Path(fc.selected_path)\n",
+    "\n",
+    "shape_path = list(chip_dir.rglob('*.shp'))\n",
+    "if len(shape_path) < 1:\n",
+    "    raise FileNotFoundError\n",
+    "elif len(shape_path) > 1:\n",
+    "    raise Exception(\"Multiple shapefiles found\")\n",
+    "else:\n",
+    "    shape_path = shape_path[0]\n",
+    "\n",
+    "planet_path = list(chip_dir.rglob('*_AnalyticMS_*.tif'))\n",
+    "if len(planet_path) < 1:\n",
+    "    raise FileNotFoundError\n",
+    "elif len(planet_path) > 1:\n",
+    "    raise Exception(\"Multiple shapefiles found\")\n",
+    "else:\n",
+    "    planet_path = planet_path[0]\n",
+    "print(shape_path)\n",
+    "print(planet_path)"
    ]
   },
   {
@@ -46,17 +87,6 @@
    "metadata": {},
    "source": [
     "### Load the chip geometry from the chip shapefile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2fbcdda-d143-4f28-8f95-82ce80854039",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shape_path = Path(fc.selected)\n",
-    "shape_path"
    ]
   },
   {
@@ -76,19 +106,18 @@
    "id": "b81a111d-907a-4b3a-8e28-303638d5bf39",
    "metadata": {},
    "source": [
-    "### Collect the chip directory and ID"
+    "### Collect the chip ID"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f731864-d08d-49f0-856c-0c36ed0d988e",
+   "id": "ae3a6575-1d9f-4cba-82e5-ed1524ba3b23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "chip_dir = shape_path.parent\n",
-    "chip_id = chip_dir.name.split('_')[-1]\n",
-    "chip_dir"
+    "chip_id = chip_dir.name\n",
+    "chip_id"
    ]
   },
   {
@@ -96,7 +125,7 @@
    "id": "b78b980d-0edb-489e-9875-0fbab8f9178f",
    "metadata": {},
    "source": [
-    "### Load the S1 class zones into a dataframe"
+    "### Load the S2 class zones into a dataframe"
    ]
   },
   {
@@ -126,8 +155,8 @@
    "outputs": [],
    "source": [
     "intersections = df_zones.geometry.intersects(geometry)\n",
-    "s1_zones = df_zones[intersections].reset_index(drop=True)\n",
-    "s1_zones"
+    "s2_zones = df_zones[intersections].reset_index(drop=True)\n",
+    "s2_zones"
    ]
   },
   {
@@ -146,9 +175,9 @@
    "outputs": [],
    "source": [
     "ds_url = \"https://lulctimeseries.blob.core.windows.net/lulctimeseriespublic/lc2021/\"\n",
-    "ds_date_range = \"20210101-20220101\"\n",
+    "date_range = '20210101-20220101'\n",
     "\n",
-    "urls = [f\"{ds_url}{zone}_{ds_date_range}.tif\" for zone in s1_zones.zone]\n",
+    "urls = [f\"{ds_url}{zone}_{date_range}.tif\" for zone in s2_zones.zone]\n",
     "urls"
    ]
   },
@@ -165,8 +194,11 @@
     "for url in urls:\n",
     "    print(url)\n",
     "    tile = rxr.open_rasterio(url, masked=True).squeeze()\n",
-    "    tile = tile.rio.clip(geometry_gdf.geometry.apply(mapping), 'EPSG:4326')\n",
-    "    to_merge.append(tile)\n",
+    "    try:\n",
+    "        tile = tile.rio.clip(geometry_gdf.geometry.apply(mapping), 'EPSG:4326')\n",
+    "        to_merge.append(tile)\n",
+    "    except rxr.exceptions.NoDataInBounds:\n",
+    "        pass\n",
     "to_merge"
    ]
   },
@@ -186,21 +218,13 @@
    "outputs": [],
    "source": [
     "merged = rxr.merge.merge_arrays(to_merge)\n",
-    "merged.rio.to_raster(chip_dir/f\"S1_LULC_{chip_id}.tif\")"
+    "merged.rio.to_raster(chip_dir/f\"S2_LULC_{chip_id}.tif\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f99f1ec-2af6-40cb-b15d-68cdc4e18e69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dswx_calval [conda env:.local-dswx_calval]",
+   "display_name": "dswx_calval",
    "language": "python",
    "name": "conda-env-.local-dswx_calval-py"
   },
