--- a/ASF/1_Download_Preprocess_Pekel_Occurrence_Data.ipynb
+++ b/ASF/1_Download_Preprocess_Pekel_Occurrence_Data.ipynb
@@ -11,13 +11,18 @@
     "from ipyfilechooser import FileChooser\n",
     "import numpy as np\n",
     "from pathlib import Path\n",
+    "import rasterio as rio\n",
     "import rioxarray as rxr\n",
     "import rioxarray.merge\n",
-    "from tqdm.auto import tqdm\n",
-    "from typing import List\n",
-    "\n",
-    "import s3fs\n",
     "from shapely.geometry import mapping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b9bcf68-b17f-4204-a342-c6e4510b047a",
+   "metadata": {},
+   "source": [
+    "**This notebook downloads Pekel Occurrence data intersecting the chip, clips each Pekel scene to the extents of the chip, and then merges them**"
    ]
   },
   {
@@ -25,7 +30,7 @@
    "id": "9195b8c3-ac6f-4819-bc86-fc21b7049719",
    "metadata": {},
    "source": [
-    "### Select the chip shape file"
+    "### Select the chip directory"
    ]
   },
   {
@@ -35,9 +40,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Select the chip shape file generated in Notebook 0\")\n",
+    "print(\"Select the chip directory containing the Planet data, which was generated in Notebook 0\")\n",
     "fc = FileChooser(Path.cwd())\n",
     "display(fc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00e25acb-16be-46b2-bee2-777dceed76e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chip_dir = Path(fc.selected_path)\n",
+    "chip_id = chip_dir.name\n",
+    "\n",
+    "shape_path = list(chip_dir.rglob('*.shp'))\n",
+    "if len(shape_path) < 1:\n",
+    "    raise FileNotFoundError\n",
+    "elif len(shape_path) > 1:\n",
+    "    raise Exception(\"Multiple shapefiles found\")\n",
+    "else:\n",
+    "    shape_path = shape_path[0]\n",
+    "\n",
+    "planet_path = list(chip_dir.rglob('*_AnalyticMS_*.tif'))\n",
+    "if len(planet_path) < 1:\n",
+    "    raise FileNotFoundError\n",
+    "elif len(planet_path) > 1:\n",
+    "    raise Exception(\"Multiple Planet data files found\")\n",
+    "else:\n",
+    "    planet_path = planet_path[0]\n",
+    "    \n",
+    "print(shape_path)\n",
+    "print(planet_path)"
    ]
   },
   {
@@ -46,17 +81,6 @@
    "metadata": {},
    "source": [
     "### Load the chip geometry from the chip shapefile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2fbcdda-d143-4f28-8f95-82ce80854039",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shape_path = Path(fc.selected)\n",
-    "shape_path"
    ]
   },
   {
@@ -73,22 +97,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b81a111d-907a-4b3a-8e28-303638d5bf39",
+   "id": "6c383b27-7235-426e-a5bf-c3488f64eeb1",
    "metadata": {},
    "source": [
-    "### Collect the chip directory and ID"
+    "### Find the Planet Data UTM"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f731864-d08d-49f0-856c-0c36ed0d988e",
+   "id": "e05477f0-9569-4a23-b853-370dd6f64964",
    "metadata": {},
    "outputs": [],
    "source": [
-    "chip_dir = shape_path.parent\n",
-    "chip_id = chip_dir.name.split('_')[-1]\n",
-    "chip_dir"
+    "with rio.open(planet_path) as planet:\n",
+    "    print(planet.crs)\n",
+    "    print(planet.transform)\n",
+    "    planet_crs = planet.crs\n",
+    "    planet_transform = planet.transform"
    ]
   },
   {
@@ -121,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91db0dda-7ebb-4b00-a9fd-f06137b7b551",
+   "id": "539786b9-d086-4f1f-a9ea-fc7e393a74c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,11 +175,31 @@
    "source": [
     "to_merge = list()\n",
     "for url in peckel_subset.source_url:\n",
-    "    print(url)\n",
+    "    \n",
+    "    # pekel_tiles.goejson contains broken urls for longitudes < 100W or 100E\n",
+    "    # example: '060W' must be converted to '60W'\n",
+    "    fname_split = url.split('/')[-1].split('_')\n",
+    "    if fname_split[1][0] == '0':\n",
+    "        fname_split[1] = fname_split[1][1:]\n",
+    "        fname = '_'.join(fname_split)\n",
+    "        url = f\"{'/'.join(url.split('/')[:-1])}/{fname}\"\n",
+    "\n",
     "    tile = rxr.open_rasterio(url, masked=True).squeeze()\n",
-    "    tile = tile.rio.clip(geometry_gdf.geometry.apply(mapping), 'EPSG:4326')\n",
-    "    to_merge.append(tile)\n",
-    "to_merge"
+    "    \n",
+    "    # tile.rio.to_raster(chip_dir/f\"{pekel_name}_{chip_id}.tif\")\n",
+    "#     tile = tile.rio.clip(geometry_gdf.geometry.apply(mapping), 'EPSG:4326')\n",
+    "#     to_merge.append(tile)\n",
+    "# to_merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7627d213-1430-4c16-887a-20d473860244",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(peckel_subset.source_url[0])"
    ]
   },
   {
@@ -171,14 +217,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pekel_name = Path(url.split('/')[-1]).stem\n",
+    "\n",
     "merged = rxr.merge.merge_arrays(to_merge)\n",
-    "merged.rio.to_raster(chip_dir/f\"pekel_occurance_{chip_id}.tif\")"
+    "merged.rio.to_raster(chip_dir/f\"{pekel_name}_{chip_id}.tif\")\n",
+    "merged"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15ce130c-ba36-4dfc-819a-e0678231ed46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dswx_calval [conda env:.local-dswx_calval]",
+   "display_name": "dswx_calval",
    "language": "python",
    "name": "conda-env-.local-dswx_calval-py"
   },
